Handle files and interfaces uniformly.
Add command-line parsing to allow the specification of an interface name or a filename. Once opened, treat these cap sources in the same way.

Made possible by pcap improvements as discussed in ebfull/pcap#16.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["Jonathan Anderson <jonathan.anderson@mun.ca>"]
 
 [dependencies]
 byteorder = "0.3.11"
-pcap = "0.3.2"
+docopt = "0.6.70"
+pcap = "0.4.2"
+rustc-serialize="*"
 
 [[bin]]
 doc = false
