--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rshark"
 version = "0.0.1"
+license = "Apache-2.0"
 authors = ["Jonathan Anderson <jonathan.anderson@mun.ca>"]
 
 [dependencies]
