Create Protocol abstraction with futures.
Adding an explicit abstraction for protocols provides a convenient place to
add promises and futures to the API. Currently, we don't actually use
asynchronous promises due to limitations in cross-thread data ownership,
but the futures API should (hopefully) be fairly stable.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 byteorder = "0.3.11"
 docopt = "0.6.70"
 pcap = "0.4.2"
+promising-future = "0.2.2"
 rustc-serialize="*"
 
 [[bin]]
