Improve parsing of [un]signed integers.
Allow the [un]signed functions to return integers smaller than [iu]64 and
also use the standard `byteorder` definitions of endianness rather than
implementing our own enum type.

Unfortunately, Rust functions are no longer allowed to have default type
arguments (see PR 30724, https://github.com/rust-lang/rust/pull/30724),
so we still have to specify the endianness explicitly every time we use
one of these functions. The may require wrapping inside a type...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 [dependencies]
 byteorder = "0.5.2"
 docopt = "0.6.80"
+num = "0.1.32"
 pcap = "0.5.7"
 promising-future = "0.2.2"
 rustc-serialize="0.3.19"
